--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ yarn-error.log*
 # Build outputs
 dist/
 build/
-*.tsbuildinfo
+.next/
+.vercel/
 
 # Environment variables
 .env
@@ -21,9 +22,15 @@ build/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Logs
@@ -38,6 +45,7 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 
 # nyc test coverage
 .nyc_output
@@ -70,23 +78,12 @@ jspm_packages/
 .cache
 .parcel-cache
 
-# next.js build output
-.next
+# Vercel
+.vercel
 
-# nuxt.js build output
-.nuxt
+# TypeScript
+*.tsbuildinfo
 
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port 
+# Temporary files
+tmp/
+temp/ 
